<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_main">
  <fragment
    android:id="@+id/login"
    android:name="me.varoa.sad.ui.screen.auth.login.LoginFragment"
    android:label="fragment_login"
    tools:layout="@layout/fragment_login">
    <action
      android:id="@+id/action_to_register"
      app:destination="@id/register" />

    <action
      android:id="@+id/action_to_list_story"
      app:destination="@id/list_story"
      app:popUpTo="@id/nav_main"
      app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/register"
    android:name="me.varoa.sad.ui.screen.auth.register.RegisterFragment"
...
