<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_maps"
    android:icon="@drawable/ic_map"
    android:title="@string/lbl_maps"
    app:showAsAction="always" />

  <item
    android:id="@+id/action_settings"
    android:icon="@drawable/ic_settings"
    android:title="@string/lbl_settings"
    app:showAsAction="always" />

  <item
    android:id="@+id/action_logout"
    android:icon="@drawable/ic_exit"
    android:title="@string/lbl_logout"
    app:showAsAction="ifRoom" />
</menu>