...
        android:visibility="invisible"
        tools:visibility="visible" />
    </FrameLayout>
  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

  <com.google.android.material.bottomappbar.BottomAppBar
    android:id="@+id/bottom_app_bar"
    style="@style/Widget.Material3.BottomAppBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:menu="@menu/bottom_main" />

...
